Viikon 3 tehtävä 4 - arvon voi nyt asettaa haluammalleen arvolle

--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,8475],[[4,5,6,0,[],[1,37,7151],[],[[7,0,0,[],[1,6629,137],[]],[8,0,0,[],[1,6766,262],[]]],[],[2,2,0,0]],[9,10,11,0,[],[1,7189,1285],[],[[12,0,0,[],[1,8187,219],[]]],[],[1,1,0,0]]],[],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,26470],[[4,5,6,0,[],[1,26,11124],[],[[7,0,0,[],[1,3438,2216],[]],[8,0,0,[],[1,5655,4865],[]]],[],[2,2,0,0]],[9,10,11,0,[],[1,11152,9948],[],[[12,0,0,[],[1,12584,7900],[]]],[],[1,1,0,0]],[13,14,15,0,[],[1,21100,5368],[],[[16,0,0,[],[1,22621,3235],[]]],[],[1,1,0,0]]],[],[],[4,4,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/hanterio/webcounter-repositorio/webcounter/src/tests","*src/tests","*Increment","*/home/hanterio/webcounter-repositorio/webcounter/src/tests/increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two","*Reset","*/home/hanterio/webcounter-repositorio/webcounter/src/tests/reset.robot","*src/tests/reset.robot","*When counter has a nonzero value and it is reset the value becomes zero"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/home/hanterio/webcounter-repositorio/webcounter/src/tests","*src/tests","*Increment","*/home/hanterio/webcounter-repositorio/webcounter/src/tests/increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two","*Lisays","*/home/hanterio/webcounter-repositorio/webcounter/src/tests/lisays.robot","*src/tests/lisays.robot","*When value ten set as value the counter is ten","*Reset","*/home/hanterio/webcounter-repositorio/webcounter/src/tests/reset.robot","*src/tests/reset.robot","*When counter has a nonzero value and it is reset the value becomes zero"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:01","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":3,"skip":0},{"elapsed":"00:00:07","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":2,"skip":0},{"elapsed":"00:00:01","fail":0,"id":"s1-s2","label":"Tests.Reset","name":"Reset","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:18","fail":0,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:26","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":4,"skip":0},{"elapsed":"00:00:11","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":2,"skip":0},{"elapsed":"00:00:10","fail":0,"id":"s1-s2","label":"Tests.Lisays","name":"Lisays","pass":1,"skip":0},{"elapsed":"00:00:05","fail":0,"id":"s1-s3","label":"Tests.Reset","name":"Reset","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1731611936283;
+window.output["baseMillis"] = 1731616369418;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8481;
+window.output["generated"] = 26477;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
